plane wave projection tensor added

--- a/t.tex
+++ b/t.tex
@@ -14,7 +14,6 @@
 %% DEBUGING ONLY, comment out in production version:
 \setcounter{tocdepth}{4} 
 \setcounter{secnumdepth}{4} 
-\usepackage{showkeys}
 
 \addbibresource{fdphd.bib}
 
@@ -31,20 +30,20 @@
 \chapter{Theory}
 \input{theory.tex}
 
-%% \chapter{Numerical methods}
-%% \input{numeric.tex}
-%% 
-%% \chapter{Experimental methods}
-%% \input{expe.tex}
-%% 
-%% \chapter{Results}
-%% \input{result.tex}
-%% 
-%% \chapter{Conclusion}
-%% \input{conclusion.tex}
-%% %
-%% \chapter{Appendices}
-%% \input{appendices.tex}
+ \chapter{Numerical methods}
+ \input{numeric.tex}
+ 
+ \chapter{Experimental methods}
+ \input{expe.tex}
+ 
+ \chapter{Results}
+ \input{result.tex}
+ 
+ \chapter{Conclusion}
+ \input{conclusion.tex}
+ %
+ \chapter{Appendices}
+ \input{appendices.tex}
 
 \label{endtext} 
 \printbibliography
